# id24-editor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: config.rs  main.rs
src/id24json/: demoloop.rs  finale.rs  gameconf.rs  interlevel.rs  mod.rs  sbardef.rs  skydefs.rs
src/id24json/test_files/: skydefs_1.json
src/pages/: demoloop.rs  gameconf.rs  mod.rs  skydefs.rs
src/widgets/: mod.rs  select_list.rs  spin_button.rs
