[package]
name = "id24-editor"
version = "0.1.0"
license = "GPL-3"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui_extras = "0.31.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
env_logger = "0.11.8"
rfd = "0.15.3"
strum = "0.27.1"
strum_macros = "0.27.1"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
rev = "c8c650c" # change to an actual release version eventually
default-features = false
features = ["winit", "rfd", "tokio"]