[package]
name = "id24-editor"
repository = "https://github.com/electricbrass/id24-editor"
version = "0.1.0-alpha.0"
license = "GPL-3"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
env_logger = "0.11.8"
strum = "0.27.1"
strum_macros = "0.27.1"
url = "2.5.4"

[dependencies.libcosmic]
git = "https://github.com/electricbrass/libcosmic"
rev = "50367b9" # change to an actual release version eventually
default-features = false
features = ["winit", "rfd", "tokio"]

[features]
default = ["wgpu"]
debug = ["libcosmic/debug"]
wgpu = ["libcosmic/wgpu"]