[package]
name = "id24-editor"
repository = "https://github.com/electricbrass/id24-editor"
version = "0.1.0-alpha.0"
license = "GPL-3"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"
env_logger = "0.11.8"
strum = "0.27.2"
strum_macros = "0.27.2"
url = "2.5.7"

[dependencies.libcosmic]
git = "https://github.com/electricbrass/libcosmic"
rev = "6439507" # change to an actual release version eventually
default-features = false
features = ["winit", "wayland", "rfd", "tokio"]

[features]
default = ["wgpu"]
debug = ["libcosmic/debug"]
wgpu = ["libcosmic/wgpu"]
